# pravi-agent

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.builder/: domains.yaml
docs/: llm-shakedown.md
docs/adr/: 0001-orchestration-temporal-no-langgraph.md  0002-llm-agnostic-architect-claude-only-dev.md  0003-sandbox-seam-no-local-mounts.md  0004-agent-personas.md  0005-no-rag-tool-use-and-explicit-context.md  README.md
docs/api/: README.md  openapi.json
docs/architecture/: agents-and-sandbox.md  data-model.md
docs/user-guide/: README.md  budgets.md  domains-yaml.md  github-oauth.md  new-repo-and-cloudflare.md  personas-and-stacks.md
examples/: blissful-infra-domains.yaml
scripts/: dev.sh  setup-temporal.sh  stop.sh
src/pravi/: config.py  logging_setup.py  temporal_utils.py  worker.py
src/pravi/activities/: db_activity.py  dev_activity.py  git_activity.py  pr_activity.py  sandbox_activity.py
src/pravi/agents/: architect.py  factory.py  protocols.py
tests/: conftest.py  test_agent_factory.py  test_aggregate_by_persona.py  test_by_persona_window.py  test_ceiling_validation.py  test_child_status_rollup.py  test_clarify_parser.py  test_decompose_materializer.py  test_decompose_parser.py  test_developer_prompt.py  test_domains_registry.py  test_eligible_tasks.py  test_persona_inheritance.py  test_personas_catalog.py  test_temporal_utils.py
tests/api/: test_openapi_spec_fresh.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: index.css  main.tsx
(+89 files in other folders)
